# helldivers2-macros

./: ._getlicences.py  .pre-commit-config.yaml  LICENSE  MANIFEST.in  README.md  inno.iss  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: release.yaml
hd2_macros/: __main__.py  config.py  config.toml  constants.py  macro.py
