[metadata]

name = hd2_macros
version = 1.0.0
author_email = spencer.young@spyoung.com
author = Spencer Young
description = Helldivers 2 macros
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/spyoungtech/helldivers2-macros
project_urls =
    Documentation = https://github.com/spyoungtech/helldivers2-macros
    Source = https://github.com/spyoungtech/helldivers2-macros
    Tracker = https://github.com/spyoungtech/helldivers2-macros/issues
keywords =
    ahk
    autohotkey
    helldivers
    macros

license_files = LICENSE
classifiers =
    Topic :: Desktop Environment
    Programming Language :: Python
    Environment :: Win32 (MS Windows)
    License :: OSI Approved :: MIT License
    Operating System :: Microsoft :: Windows
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12

[options]
include_package_data = True
packages =
    hd2_macros
install_requires =
    ahk
    pydantic

[options.extras_require]
binary = ahk-binary==2023.9.0

[options.package_data]
ahk =
    py.typed
    config.toml
